# Proteus

./: .gitignore  README.md  cli.py  cmd.txt  cmd2.txt  cmd_obf.json  cmd_plain.json  config.py  encoded.json  main.py  plain.json  pyproject.toml  sqli.json
core/: models.py  pipeline.py  registry.py
docs/: ETHICS.md  USAGE.md
exporters/: json_exporter.py  txt_exporter.py
modules/: cmd_injection.py  sqli.py  xss.py
samples/: example_sqli.txt  example_xss.json  sqli_catalog.txt  xss_templates.json
tests/: test_cli.py  test_encoder.py  test_exporters.py  test_modules.py  test_pipeline.py
transforms/: encoder.py  obfuscator.py
