[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus-framework"
version = "0.1.0"
description = "Proteus — Educational Offensive Payload Framework (Non-Executing)"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = []

[project.scripts]
proteus = "main:run"
